# gpulite

./: CMakeLists.txt  CNAME  LICENSE  Makefile  README.md  gpulite  index.html  main.cpp  package-lock.json
src/: main.cpp  stat.cpp
src/gpu/: benchmark.cpp  benchmark.hpp  gpu_info.cpp  gpu_info.hpp  metal_bench.hpp  metal_bench.mm  monitor.cpp  monitor.hpp  process.cpp  process.hpp  shaders.metal
src/ui/: banner.cpp  banner.hpp  color.hpp  terminal.cpp  terminal.hpp
src/utils/: exporter.cpp  exporter.hpp  shell.cpp  shell.hpp
